# ILab2

./: .gitattributes  .gitignore  README.md  tst.cpp
1_Cache/: CMakeLists.txt  cache.h  main_lfu.cpp  tst_bel.h  tst_lfu.cpp
1_Cache/O_N_LFU/: O_N_LFU.h
2_TrigonCross/: CMakeLists.txt  Makefile  geom.cpp  geom.h  main.cpp  main_ON2.cpp  plane.h  tst.cpp  vec.cpp  vec.h
2_TrigonCross/g_obj/: line.h  plane.cpp  plane.h  triangle.cpp  triangle.h  vec.cpp  vec.h
2_TrigonCross/geom/: CMakeLists.txt  geom.cpp  geom.h
2_TrigonCross/geom/g_obj/: box.cpp  box.h  line.cpp  line.h  plane.cpp  plane.h  triangle.cpp  triangle.h  vec.cpp  vec.h
2_TrigonCross/geom/octree/: octnode.hh  octnode.ii  octree.hh
2_TrigonCross/octree/: octnode.h  octnode.hh  octnode.i  octnode.ii  octree.h  octree.hh
2_TrigonCross/tst/: 12.ans  15.ans  16.ans  20.ans  21.ans  22.ans  23.ans  24.ans  25.ans  26.ans  29.ans  31.ans  32.ans  33.ans  40.ans  42.ans  43.ans  6.ans  7.ans  8.ans  9.ans
3_SrchTree/: CMakeLists.txt  Makefile  README.md  main.cc  main_time.cc  map.h  map_operators.h  nec.hh  node.h  node.hh  node.ii  pair.h  test.cc  test.cpp  tree.cpp  tree.h  tree.hh  tree.ii
3_SrchTree/my_pair/: pair.h  pair.ii
4_Matrix/: CMakeLists.txt  main.cc  main.cpp  matrix.h  matrix.hh  matrix.hpp  matrix.ii  matrix.inl  test.cc  test.cpp
4_Matrix/1_determinant/: CMakeLists.txt  matrix.hh  test.cc
4_Matrix/1_determinant/mul_speed_tst/: mul_speed.cc
4_Matrix/1_determinant/tst/: 6.ans
4_Matrix/2_Circuits/: README.md
4_Matrix/2_circuits/: README.md
4_Matrix/3_Chain/: README.md
4_Matrix/mul_speed_tst/: mul_speed.cpp
4_Matrix/tst/: CMakeLists.txt  fst.sh  tstgen.cpp
5_ParaCL/: README.md  lex.yy.cc  my.tst  my_lex.cc  my_lex.l  my_lexer.hh
5_ParaCL/advgrammar/: lex.yy.cc  numgrammar.tab.cc  numgrammar.tab.hh
5_ParaCL/numadvanced/: lex.yy.cc
5_ParaCL/numexample/: lex.yy.cc
5_ParaCL/numgrammar/: numgrammar.tab.cc  numgrammar.tab.hh
6_OpenCL/: README.md
cache/: Makefile  belady.h  cache.cpp  cache.h  main.cpp  main_bel.cpp  tst.cpp  tst_bel.cpp  tst_bel.h  tst_lfu.h  web.txt  web_filler.py
cache/O_N_LFU/: O_N_main.cpp
srch_tree/: map.cpp  node.cpp  test.cpp  tree.h
trigon_cross/: Makefile  geom.cpp  geom.h  line.h  main.cpp  plane.h  triangle.h  tst.cpp  vec.cpp  vec.h
(+5 files in other folders)
